@@ -55,6 +55,7 @@ examples/fixture_create_and_print_statement_wd_image_dog.pl
 examples/fixture_create_and_print_statement_wd_instance_of_common_living_organism.pl
 examples/fixture_create_and_print_statement_wd_instance_of_human.pl
 examples/fixture_create_and_print_statement_wd_instance_of_version_edition_or_translation.pl
+examples/fixture_create_and_print_statement_wd_instance_of_wikidata_property.pl
 examples/fixture_create_and_print_statement_wd_item_for_this_sense_dog.pl
 examples/fixture_create_and_print_statement_wd_sex_or_gender_male.pl
 examples/fixture_create_and_print_value_item_wd_dog.pl
