@@ -1,0 +1,16 @@
+#!/usr/bin/env perl
+
+use strict;
+use warnings;
+
+use Test::Shared::Fixture::Wikibase::Datatype::Statement::Wikidata::InstanceOf::WikidataProperty;
+use Wikibase::Datatype::Print::Statement;
+
+# Object.
+my $obj = Test::Shared::Fixture::Wikibase::Datatype::Statement::Wikidata::InstanceOf::WikidataProperty->new;
+
+# Print out.
+print scalar Wikibase::Datatype::Print::Statement::print($obj);
+
+# Output:
+# P31: Q32753077 (normal)
